--- a/app/src/main/res/layout/my_camera.xml
+++ b/app/src/main/res/layout/my_camera.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
-    <com.txby.zxing.view.ViewfinderView
+    <com.txby.zxing.view.BaseViewfinderView
         android:id="@+id/viewfinder_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
